--- a/main/pom.xml
+++ b/main/pom.xml
@@ -14,17 +14,24 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <dependencies>
+  <dependencies>  
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      	<groupId>junit</groupId>
+      	<artifactId>junit</artifactId>
+      	<version>3.8.1</version>
+      	<scope>test</scope>
     </dependency>
+    
     <dependency>
     	<groupId>mil.nga</groupId>
     	<artifactId>tiff</artifactId>
     	<version>2.0.0</version>
 	</dependency>
+	
+	<dependency>
+    	<groupId>org.gdal</groupId>
+    	<artifactId>gdal</artifactId>
+    	<version>2.3.0</version>    	
+	</dependency>	
   </dependencies>
 </project>
