--- a/main/pom.xml
+++ b/main/pom.xml
@@ -32,6 +32,14 @@
     	<groupId>org.gdal</groupId>
     	<artifactId>gdal</artifactId>
     	<version>2.3.0</version>    	
-	</dependency>	
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.json/json -->
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20180130</version>
+</dependency>
+		
   </dependencies>
 </project>
